--- a/talkmap/map.html
+++ b/talkmap/map.html
@@ -15,6 +15,15 @@
     	<script src="org-locations.js"></script>
 
     </head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TT2W3KR76"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TT2W3KR76');
+</script>
     <body>
 
     	<div id="map"></div>
