--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -12,3 +12,12 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TT2W3KR76"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TT2W3KR76');
+</script>
